Path fixed, navbar collapse fixed

--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,3 @@
-.space{
-    margin-top:10px;
-}
 .table-fixed {
     width: 100%;
 }
