--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,7 @@
 form .error {
     color: #ff0000;
 }
+
+.space{
+    margin:10px;
+}
